--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.3.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-reanimated": "^2.5.0",
-    "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-stack": "^1.0.0-alpha11",
     "react-native-web": "^0.17.1",
     "react-navigation": "^4.4.4",
