--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "holachatapp",
+  "name": "chatapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -7,30 +7,30 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.1",
-    "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "^2.3.2",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-stack": "^1.0.0-alpha11",
-    "react-native-web": "^0.17.1",
+    "react-native-reanimated": "^2.5.0",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
+    "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-native": "^0.0.0",
-    "yarn": "^1.22.18"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
+    "@react-navigation/stack": "^6.2.1",
+    "react-devtools": "^4.24.3"
   },
   "private": true
 }
