--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.10",
     "node": "^17.7.2",
+    "npm-check-updates": "^12.5.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -30,7 +31,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^8.2.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@react-navigation/stack": "^6.2.1",
