--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatapp",
+  "name": "holachatapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -7,43 +7,34 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "react-devtools": "react-devtools"
+    "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "7.1.3",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-location": "~14.0.1",
+    "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^9.6.10",
-    "node": "^17.7.2",
-    "npm-check-updates": "^12.5.8",
+    "firebase": "^7.9.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.3.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-reanimated": "^2.5.0",
-    "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1",
-    "react-native-vector-icons": "^9.1.0",
+    "react-native-maps": "0.29.4",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4",
-    "uuid": "^8.3.2"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@react-native-async-storage/async-storage": "^1.17.3",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^8.2.0",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.1",
-    "@react-navigation/stack": "^6.2.1",
-    "firebase-tools": "^10.5.0",
-    "react-devtools": "^4.24.3",
-    "react-native-elements": "^3.4.2"
+    "@babel/core": "^7.12.9"
   },
-  "private": true,
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "private": true
 }
